--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 											<div style="clear: right; text-align: left;  display: inline;">
 												<p>Dear Hiring Manager,</p>
-												<p>I am Giang Pham. I am currently seeking a position as a:</p>
+												<p>I am Giang Pham, currently seeking a position as a:</p>
 												<ul>
 													<li>Data Analyst.</li>
 													<li>Business Intelligence Analyst.</li>
@@ -145,7 +145,7 @@
 														</li>
 													</ul>
 													
-													<img src="images/skills-infographic.jpg" alt="Skills Infographic" style="display: block; margin: auto; ">	
+													<!-- <img src="images/skills-infographic.jpg" alt="Skills Infographic" style="display: block; margin: auto; ">	 -->
 
 													<!-- <ul>
 														<li> <span class="label">Data tools</span> <span class="value">: Excel, Gsheets, SQL, Looker, Power BI, Basic Python.</span></li>
@@ -174,8 +174,24 @@
 												<p><b>Preferred Locations</b></p>
 												<ul>
 													<li>Ho Chi Minh City.</li>
-													<li>Binh Duong, or Dong Nai (if transportation is provided).</li>
+													<li>Binh Duong.</li>
 												</ul>
+
+												<!-- <p><b>Job Preferences</b></p>
+												<ul class="content">
+													<li class="content-line">
+														<span class="label">Locations</span>
+														<span class="value">: Ho Chi Minh City, Binh Duong.</span>
+													</li>
+													<li class="content-line">
+														<span class="label">Salary</span>
+														<span class="value">: Negotiable.</span>
+													</li>
+													<li class="content-line">
+														<span class="label">Start Date</span>
+														<span class="value">: Negotiable.</span>
+													</li>
+												</ul> -->
 
 												<p><b>Personal Information</b></p>
 												<ul class="content">
@@ -187,13 +203,13 @@
 														<span class="label">Email</span>
 														<span class="value">: giangpnt.work@gmail.com</span>
 													</li>
-													<li class="content-line">
+													<!-- <li class="content-line">
 														<span class="label">LinkedIn</span>
 														<span class="value">: <a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></span>
-													</li>
+													</li> -->
 													<li class="content-line">
 														<span class="label">Address</span>
-														<span class="value">: Phu Nhuan district, HCM city, Vietnam.</span>
+														<span class="value">: Phu Nhuan District, HCM City, Vietnam.</span>
 													</li>
 												</ul>
 
@@ -646,15 +662,15 @@
 							<dl class="alt">
 								<dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
 								<dd><a href="#">giangpnt.work@gmail.com</a></dd>
-								<dt><i class="fa-brands fa-linkedin"></i></dt>
-								<dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
+								<!-- <dt><i class="fa-brands fa-linkedin"></i></dt> -->
+								<!-- <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd> -->
 								<dt><i class="fa-brands fa-github"></i></dt>
 								<dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
 								<dt><i class="fa-sharp fa-solid fa-location-dot"></i></dt>
 								<dd>Ho Chi Minh city, Vietnam</dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+								<!-- <li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li> -->
 								<li><a href="https://giangpham1410.github.io/"target="_blank"  class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://medium.com/@giangpham1410" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
 							</ul>
