--- a/headcount-in-2020.html
+++ b/headcount-in-2020.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>US Labor Statistics - What do wage & employment figures look like by industry?</title>
+		<title>How is 2020 headcount?</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -20,8 +20,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>US Labor Statistics - What do wage & employment figures look like by industry?</h1>
-						<p class="detailed-skill">Skills: Exploratory data Analysis, data visualization, storytelling</p>
+						<h1>How is 2020 headcount?</h1>
+						<p class="detailed-skill">Skills: Data visualization, storytelling</p>
 					</header>
 
 				<!-- Main -->
@@ -29,26 +29,11 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="..\images\wage-employee-by-industry.png" alt="US Labor Statistics - What do wage & employment figures look like by industry?" /></span>
 								<h2>1. Dataset Summary</h2>
-                                    <p>US labor statistics by industry & state, from 2017 to 2020.</p>
-                                <h2>2. Dimensions & Measures</h2>
-                                    <ul>
-                                        <li>Dimensions: Year, Industry, State </li>
-                                        <li>Measures: Establishments, Employees, Avg Annual Wage</li>
-                                    </ul>
-								<h2>3. Tool: Excel</h2>
-                                <h2>4. Data fields</h2>
-                                    <ul>
-                                        <li>Columns: 6</li>
-                                        <li>Rows: 1,918</li>
-                                    </ul>
+                                    <p>HR data, from January 2020 to December 2020.</p>
+								<h2>2. Tool: Excel</h2>
 
-                                    <center><img src="..\images\US Labor Statistics.png" alt="US Labor Statistics"></center>
-                            
-                                    <p class="backtohomepage">
-                                        <a href="https://giangpham1410.github.io/"> BACK TO HOMEPAGE</a>
-                                    </p>
+								<img src="../images/headcount-2020.png" alt="Headcount 2020"></center>
 							</section>
 
                             
