--- a/hiza-logistics-owee-performance.html
+++ b/hiza-logistics-owee-performance.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>US Labor Statistics - What do wage & employment figures look like by industry?</title>
+		<title>Hiza logistics & Owee: Analyzing transport performance</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -20,8 +20,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>US Labor Statistics - What do wage & employment figures look like by industry?</h1>
-						<p class="detailed-skill">Skills: Exploratory data Analysis, data visualization, storytelling</p>
+						<h1>Hiza logistics & Owee: Analyzing transport performance</h1>
+						<p class="detailed-skill">Skills: Data analysis, pivot tables, data visualization</p>
 					</header>
 
 				<!-- Main -->
@@ -29,23 +29,23 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="..\images\wage-employee-by-industry.png" alt="US Labor Statistics - What do wage & employment figures look like by industry?" /></span>
+								<span class="image main"><img src="../images/hiza-logistics.png" alt="Hiza logistics & Owee: Analyzing transport performance" /></span>
 								<h2>1. Dataset Summary</h2>
-                                    <p>US labor statistics by industry & state, from 2017 to 2020.</p>
-                                <h2>2. Dimensions & Measures</h2>
+                                    <p>Delivery order from week 1 to week 5.</p>
+								<h2>2. Data structure</h2>
+								<p>Multiple tables:</p>
+								<ul>
+									<li>Dropship</li>
+									<li>Non Dropship</li>
+									<li>CR Pickup</li>
+								</ul>
+                                <h2>3. Dimensions & Measures</h2>
                                     <ul>
-                                        <li>Dimensions: Year, Industry, State </li>
-                                        <li>Measures: Establishments, Employees, Avg Annual Wage</li>
+                                        <li>Dimensions:  Delivery date</li>
+                                        <li>Measures: order_code, is_ontime_edd, is_ontime_fa_edd, is_ontime_fa_pickup</li>
                                     </ul>
-								<h2>3. Tool: Excel</h2>
-                                <h2>4. Data fields</h2>
-                                    <ul>
-                                        <li>Columns: 6</li>
-                                        <li>Rows: 1,918</li>
-                                    </ul>
-
-                                    <center><img src="..\images\US Labor Statistics.png" alt="US Labor Statistics"></center>
-                            
+								<h2>4. Tool: Excel</h2>
+                                
                                     <p class="backtohomepage">
                                         <a href="https://giangpham1410.github.io/"> BACK TO HOMEPAGE</a>
                                     </p>
