--- a/remote-working-survey.html
+++ b/remote-working-survey.html
@@ -9,9 +9,9 @@
 		<title>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</h1>
-						<p>Skills: Cleaning data, pivot tables, data analysis, data visualization, storytelling</p>
+						<p class="detailed-skill">Skills: Cleaning data, pivot tables, data analysis, data visualization, storytelling</p>
 					</header>
 
 				<!-- Main -->
@@ -29,7 +29,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\remote-work-report.png" alt="" /></span>
+								<span class="image main"><img src="..\images\remote-work-report.png" alt="" /></span>
 								<h2>1. Dataset Summary</h2>
                                     <ul>
                                         <li>This dataset contains the results of two surveys of 1,500 remote workers commissioned by the state of New South Wales (NSW). The first took place in August and September 2020 and aimed to capture the remote work experiences and attitudes at the height of the COVID lockdown. Once health restrictions were reduced and a return to lockdown seemed unlikely, a similar survey was conducted between March and April 2021.</li>
@@ -97,16 +97,16 @@
                         <h2>Contact Me</h2>
                         <dl class="alt">
                             <dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
-                            <dd><a href="#">giang.pnt1410@gmail.com</a></dd>
-                            <dt><i class="fa-brands fa-linkedin"></i></dt>
-                            <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
+                            <dd><a href="#">giangpnt.work@gmail.com</a></dd>
+                            <!-- <dt><i class="fa-brands fa-linkedin"></i></dt> -->
+                            <!-- <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd> -->
                             <dt><i class="fa-brands fa-github"></i></dt>
                             <dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
                             <dt><i class="fa-sharp fa-solid fa-location-dot"></i></dt>
                             <dd>Ho Chi Minh city, Vietnam</dd>
                         </dl>
                         <ul class="icons">
-                            <li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+                            <!-- <li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li> -->
                             <li><a href="https://giangpham1410.github.io/"target="_blank"  class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
                             <!-- <li><a href="" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li> -->
                         </ul>
