--- a/global-unicorn-landscape.html
+++ b/global-unicorn-landscape.html
@@ -9,9 +9,9 @@
 		<title>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</h1>
-						<p>Skills: Cleaning data, exploratory data analysis, pivot tables, data visualization, storytelling</p>
+						<p class="detailed-skill">Skills: Cleaning data, exploratory data analysis, pivot tables, data visualization, storytelling</p>
 					</header>
 
 				<!-- Main -->
@@ -29,12 +29,12 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\global-unicorn-landscape.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" /></span>
+								<span class="image main"><img src="..\images\global-unicorn-landscape.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" /></span>
 								<h2>1. Dataset Summary</h2>
                                     <p>A unicorn company is a private company with a valuation of more than $1 billion, and today there are over 1,000 unicorn companies around the world!</p>
                                 <h2>2. Dimensions & Measures</h2>
                                     <ul>
-                                        <li>Dimensions:  Dimensions: Company, Date Joined, Industry, City, Country, Continent, Year Founded, Select Investors</li>
+                                        <li>Dimensions: Company, Date Joined, Industry, City, Country, Continent, Year Founded, Select Investors</li>
                                         <li>Measures: Valuation, Funding</li>
                                     </ul>
 								<h2>3. Tool: Excel</h2>
@@ -61,16 +61,16 @@
 						<h2>Contact Me</h2>
 						<dl class="alt">
 							<dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
-							<dd><a href="#">giang.pnt1410@gmail.com</a></dd>
-							<dt><i class="fa-brands fa-linkedin"></i></dt>
-							<dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
+							<dd><a href="#">giangpnt.work@gmail.com</a></dd>
+							<!-- <dt><i class="fa-brands fa-linkedin"></i></dt> -->
+							<!-- <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd> -->
 							<dt><i class="fa-brands fa-github"></i></dt>
 							<dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
 							<dt><i class="fa-sharp fa-solid fa-location-dot"></i></dt>
 							<dd>Ho Chi Minh city, Vietnam</dd>
 						</dl>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+							<!-- <li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li> -->
 							<li><a href="https://giangpham1410.github.io/"target="_blank"  class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 							<!-- <li><a href="" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li> -->
 						</ul>
