--- a/powerbi-projects/human-resources.html
+++ b/powerbi-projects/human-resources.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Human Resources Report - Overview, Income, and Satisfaction Insights</h1>
-						<p>Skills: ETL, data analysis, DAX, data visualization</p>
+						<p class="detailed-skill">Skills: ETL, data analysis, DAX, data visualization</p>
 					</header>
 
 				<!-- Main -->
@@ -62,16 +62,16 @@
 						<h2>Contact Me</h2>
 						<dl class="alt">
 							<dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
-							<dd><a href="#">giang.pnt1410@gmail.com</a></dd>
-							<dt><i class="fa-brands fa-linkedin"></i></dt>
-							<dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
+							<dd><a href="#">giangpnt.work@gmail.com</a></dd>
+							<!-- <dt><i class="fa-brands fa-linkedin"></i></dt> -->
+							<!-- <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd> -->
 							<dt><i class="fa-brands fa-github"></i></dt>
 							<dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
 							<dt><i class="fa-sharp fa-solid fa-location-dot"></i></dt>
 							<dd>Ho Chi Minh city, Vietnam</dd>
 						</dl>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+							<!-- <li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li> -->
 							<li><a href="https://giangpham1410.github.io/"target="_blank"  class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 							<!-- <li><a href="" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li> -->
 						</ul>
