--- a/sql-projects/atliq-hardware.html
+++ b/sql-projects/atliq-hardware.html
@@ -30,13 +30,11 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<h2>I. Introduction</h2>
-									<ul>
-										<li>Did you know that over 115 million kilograms of pizza is consumed daily worldwide??? (Well according to Wikipedia anyway…)</li>
-										<li>Danny was scrolling through his Instagram feed when something really caught his eye - “80s Retro Styling and Pizza Is The Future!”</li>
-										<li>Danny was sold on the idea, but he knew that pizza alone was not going to help him get seed funding to expand his new Pizza Empire - so he had one more genius idea to combine with it - he was going to Uberize it - and so Pizza Runner was launched!</li>
-										<li>Danny started by recruiting “runners” to deliver fresh pizza from Pizza Runner Headquarters (otherwise known as Danny’s house) and also maxed out his credit card to pay freelance developers to build a mobile app to accept orders from customers.</li>
-									</ul>
+									
                                 <h2>II. Dataset summary</h2>
+								<p>Fiscal year from September to August: <br>
+									Fiscal year 2023: 09/2022 -> 08/2023
+								</p>
 								<p> The dataset includes 6 tables:</p>
 									<ul>
 										<li>customer_orders <br>
@@ -59,12 +57,12 @@
 										</li>
 									</ul>
 								<h2>III. Problems:</h2>
-									<p>Danny wants to use the data to answer 5 areas:</p>
+									<p>Use the data to answer 5 areas:</p>
 									<ul>
-										<li>Pizza Metrics</li>
-										<li>Runner and Customer Experience</li>
-										<li>Ingredient Optimisation</li>
-										<li>Pricing and Ratings</li>
+										<li>Finance analytics</li>
+										<li>Customer behavior</li>
+										<li>Product & Market analysis</li>
+										<li>Supply Chain Analytics</li>
 										<!-- <li>Bonus DML Challenges (DML = Data Manipulation Language)</li> -->
 									</ul>
                                 <h2>IV. Language: MySQL</h2>
