--- a/sql-projects/fuzzy-factory.html
+++ b/sql-projects/fuzzy-factory.html
@@ -71,15 +71,15 @@
 						<dl class="alt">
 							<dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
 							<dd><a href="#">giangpnt.work@gmail.com</a></dd>
-							<dt><i class="fa-brands fa-linkedin"></i></dt>
-							<dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
+							<!-- <dt><i class="fa-brands fa-linkedin"></i></dt> -->
+							<!-- <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd> -->
 							<dt><i class="fa-brands fa-github"></i></dt>
 							<dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
 							<dt><i class="fa-sharp fa-solid fa-location-dot"></i></dt>
 							<dd>Ho Chi Minh city, Vietnam</dd>
 						</dl>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+							<!-- <li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li> -->
 							<li><a href="https://giangpham1410.github.io/"target="_blank"  class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 							<!-- <li><a href="" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li> -->
 						</ul>
