--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 														</li>
 														<li class="content-line">
 															<span class="label">English</span>
-															<span class="value">: Good reading and research skills, basic speaking and listening.</span>
+															<span class="value">: Good reading and writing skills, basic speaking and listening.</span>
 														</li>
 														<li class="content-line">
 															<span class="label">Soft skills</span>
@@ -363,7 +363,7 @@
 							<section id="sql" class="main special">
 								<header class="major">
 									<h2><span>SQL Projects</span></h2>
-									<h3>Skills: Joins, Subquery, Window Functions, CTE</h3>
+									<h3>Skills: Joins, Subquery, Window Functions, Common Table Expressions (CTE), Views, User-Defined Functions (UDF), Stored Procedure, Triggers</h3>
 									<p></p>
 								</header>
 								<ul class="features">
