--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 							<section id="sql" class="main special">
 								<header class="major">
 									<h2><span>SQL Projects</span></h2>
-									<h3>Skills: Joins, Subquery, Window Functions, Common Table Expressions (CTE), Views, User-Defined Functions (UDF), Stored Procedure, Triggers</h3>
+									<h3>Skills: Joins, Subquery, Window Functions, Common Table Expressions (CTE), Views, User-Defined Functions (UDF), Stored Procedure</h3>
 									<p></p>
 								</header>
 								<ul class="features">
@@ -544,6 +544,11 @@
 										<td>In Progress</td>
 										<td>AWS</td>
 										<td>AWS Cloud Technology Consultant Professional</td>
+									</tr>
+									<tr>
+										<td>09/2024</td>
+										<td>Codebasics</td>
+										<td>SQL Beginner to Advanced For Data Professionals</td>
 									</tr>
 									<!-- <tr>
 										<td>09/2024</td>
